--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,11 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: #282828
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #282828;
+}
 
+/* [type='checkbox']:checked {
+  background: rgb(87, 210, 10);
+  border: 3px solid rgba(138, 250, 18, 0.78);
+} */
